@@ -10,14 +10,16 @@
 //
 // Module: EvtBCVFF.cc
 //
-// Description: form factors for Bc->Vlnu 
+// Description: form factors for Bc->Vlnu
 //
 // Modification history:
 //
-//    AVL Jul 6, Module created
+//    AVL     Jul 6, 2012             Module created
+//    AVL     Feb 5, 2018            D0, D*0 modes added
 //
 //------------------------------------------------------------------------
 // 
+#include "EvtGenBase/EvtPatches.hh"
 #include "EvtGenBase/EvtPatches.hh"
 #include "EvtGenBase/EvtReport.hh"
 #include "EvtGenModels/EvtBCVFF.hh"
@@ -35,7 +37,12 @@ EvtBCVFF::EvtBCVFF(int idV, int fit) {
 
   idVector = idV;
   whichfit = fit;
-  //cout<<"==== EvtBCVFF:: idVector="<<idVector<<" whichfit="<<whichfit<<endl;
+  MBc = EvtPDL::getMeanMass(EvtPDL::getId("B_c+"));
+  MD0 = EvtPDL::getMeanMass(EvtPDL::getId("D*0"));
+  Mpsi = EvtPDL::getMeanMass(EvtPDL::getId("J/psi"));
+  Mpsi2S = EvtPDL::getMeanMass(EvtPDL::getId("psi(2S)"));
+  kappa = Mpsi/Mpsi2S;
+  Mchi = EvtPDL::getMeanMass(EvtPDL::getId("chi_c1"));
   return;
 }
 
@@ -53,16 +60,15 @@ void EvtBCVFF::getvectorff(EvtId,EvtId, double t, double,
 
   if (idVector == EvtPDL::getId("J/psi").getId() ) { // Bc -> J/psi
     if (whichfit == 1) { // SR form factor set from [Kiselev, hep-ph/0211021]
-      double Mbc = 6.277, Mpsi=3.0967; // Experimental values
       double Mpole2 = 4.5*4.5, den = 1./(1.-q2/Mpole2);
       double FV = 0.11*den,
         FAp = -0.074*den,
         FA0 = 5.9*den,
         FAm = 0.12*den;
-      *vf = (Mbc + Mpsi)*FV;
-      *a2f = -(Mbc+Mpsi)*FAp;
-      *a1f = FA0/(Mbc+Mpsi);
-      *a0f = (q2*FAm + (Mbc+Mpsi)*(*a1f)-(Mbc-Mpsi)*(*a2f))/(2*Mpsi);    
+      *vf = (MBc + Mpsi)*FV;
+      *a2f = -(MBc+Mpsi)*FAp;
+      *a1f = FA0/(MBc+Mpsi);
+      *a0f = (q2*FAm + (MBc+Mpsi)*(*a1f)-(MBc-Mpsi)*(*a2f))/(2*Mpsi);
       return;
     } else if (whichfit == 2) {  // form factor set from  [Ebert, hep-ph/0306306] 
       *vf = (0.49077824756158533 - 0.0012925655191347828*q2)/(1 - 0.06292520325875656*q2);
@@ -71,40 +77,36 @@ void EvtBCVFF::getvectorff(EvtId,EvtId, double t, double,
       *a2f = (0.7315284919705497 + 0.0014263826220727142*q2 -  0.0006946090066269195*q2*q2)/(1 - 0.04885587273651653*q2);
       return;
     } else {
-      EvtGenReport(EVTGEN_ERROR,"EvtGen") << "Must choose 0 (a1f = 1), 1 (Kiselev), or 2 (Ebert).\n";  
+      EvtGenReport(EVTGEN_ERROR,"EvtBCVFF") << "Must choose 0 (a1f = 1), 1 (Kiselev), or 2 (Ebert).\n";
       ::abort();
     }
   } else if (idVector == EvtPDL::getId("psi(2S)").getId()) { // Bc -> psi((2S)
     if (whichfit == 1) {
-      ////cout<<"BC2:: psi2S, Kiselev, q2="<<q2<<endl;
-      double Mbc = 6.277, Mpsi=3.0967, Mpsi2S = 3.686, kappa = Mpsi/Mpsi2S; // Experimental values
       double Mpole2 = 4.5*4.5, den=1./(1.-q2/Mpole2);
       double FV = 0.11*den*kappa/3.1,
         FAp = -0.074*den*kappa/4.9,
         FA0 = 5.9*den*kappa/3.5,
         FAm = 0.12*den*kappa/2.3;
-      *vf = (Mbc + Mpsi2S)*FV;
-      *a2f = -(Mbc+Mpsi2S)*FAp;
-      *a1f = FA0/(Mbc+Mpsi2S);
-      *a0f = (q2*FAm + (Mbc+Mpsi2S)*(*a1f)-(Mbc-Mpsi2S)*(*a2f))/(2*Mpsi2S);  
+      *vf = (MBc + Mpsi2S)*FV;
+      *a2f = -(MBc+Mpsi2S)*FAp;
+      *a1f = FA0/(MBc+Mpsi2S);
+      *a0f = (q2*FAm + (MBc+Mpsi2S)*(*a1f)-(MBc-Mpsi2S)*(*a2f))/(2*Mpsi2S);
       return;
     } else if (whichfit == 2) {
-      ////cout<<"BC2:: psi2S, Ebert, q2="<<q2<<endl;
       *vf  =  (0.24177223968739653 - 0.053589051007278135*q2)/(1 - 0.0977848994260899*q2);
       *a0f = (0.23996026570086615 - 0.03530198514007337*q2)/(1 - 0.09371162519983989*q2);
       *a1f = (0.17418379258849329 - 0.004129699022085851*q2*q2)/(1 + 0.06607665248402918*q2);
       *a2f = (0.1352376939112041 - 0.040361722565209444*q2 + 0.003343515369431853*q2*q2)/(1 - 0.1463698128333418*q2);
       return;
     } else {
-      EvtGenReport(EVTGEN_ERROR,"EvtGen") << "Must choose 0 (a1f = 1), 1 (Kiselev), or 2 (Ebert).\n";  
+      EvtGenReport(EVTGEN_ERROR,"EvtBCVFF") << "Must choose 0 (a1f = 1), 1 (Kiselev), or 2 (Ebert).\n";
       ::abort();
     }
   } else if (idVector == EvtPDL::getId("chi_c1").getId() ) { // Bc -> chi_c1
     if (whichfit == 3) { // FF from Wang et al 10.1103/PhysRevD.79.114018
-      double Mbc = 6.277, Mchi = 3.51066; // Experimental values
-      double SoverD = (Mbc+Mchi)/(Mbc-Mchi);
-      double DoverS = (Mbc-Mchi)/(Mbc+Mchi);
-      double ratio = q2 / (Mbc*Mbc);
+      double SoverD = (MBc+Mchi)/(MBc-Mchi);
+      double DoverS = (MBc-Mchi)/(MBc+Mchi);
+      double ratio = q2 / (MBc*MBc);
       
       double vf_0 = SoverD * 0.36;
       double vf_c1 = 1.98;
@@ -127,13 +129,49 @@ void EvtBCVFF::getvectorff(EvtId,EvtId, double t, double,
       *a1f = a1f_0*exp(a1f_c1*ratio+a1f_c2*ratio*ratio);
       *a0f = a0f_0*exp(a0f_c1*ratio+a0f_c2*ratio*ratio);
       return;
-
     } else {
-      EvtGenReport(EVTGEN_ERROR,"EvtGen") << "Must choose 0 (a1f = 1) or 1 (Wang).\n";  
+      EvtGenReport(EVTGEN_ERROR,"EvtBCVFF") << "Must choose 0 (a1f = 1) or 3 (Wang).\n";
+      ::abort();
+    }
+  } else if (idVector == EvtPDL::getId("D*0").getId() || idVector == EvtPDL::getId("anti-D*0").getId()) {
+    if (whichfit == 1) {
+      // SR form factor set from Kiselev, hep-ph/0211021
+      double Mpole2 = 6.2 * 6.2, den = (1. - q2 / Mpole2);
+      if (fabs(den) < 1e-10) {
+	*vf = 0;
+	*a2f = 0;
+	*a1f = 0;
+	*a0f = 0;
+      } else {
+	double FV = 0.20 / den,
+	  FAp = -0.062 / den,
+	  FA0 = 3.6,
+	  FAm = 0.11 / den;
+	*vf = (MBc + MD0) * FV;
+	*a2f = -(MBc + MD0) * FAp;
+	*a1f = FA0 / (MBc + MD0);
+	*a0f = (q2 * FAm + (MBc + MD0)*(*a1f)-(MBc - MD0)*(*a2f)) / (2 * MD0);
+      }
+      return;
+    } else if (whichfit == 2) {
+      // form factors from Ebert, hep-ph/0306306
+      double ratio = q2 / MBc / MBc;
+      double const fV_0 = 0.202, fV_a = 1.38, fV_b = 1.31;
+      double const fA2_0 = 0.22, fA2_a = 2.44, fA2_b = -1.21;
+      double const fA0_0 = 0.144, fA0_a = 1.18, fA0_b = 1.39;
+      double const fA1_0 = 0.174, fA1_a = 1.69, fA1_b = -0.219;
+
+      *vf = fV_0 / (1 - fV_a * ratio - fV_b * ratio * ratio);
+      *a2f = fA2_0 / (1 - fA2_a * ratio - fA2_b * ratio * ratio);
+      *a0f = fA0_0 / (1 - fA0_a * ratio - fA0_b * ratio * ratio);
+      *a1f = fA1_0 / (1 - fA1_a * ratio - fA1_b * ratio * ratio);
+      return;
+    } else {
+      EvtGenReport(EVTGEN_ERROR,"BCVFF") << "FF should be 0 (a1f = 1), 1 (Kiselev 2002) or 2 (Ebert).\n";
       ::abort();
     }
   } else {
-    EvtGenReport(EVTGEN_ERROR,"EvtGen") << "Only J/psi, psi(2S), chi_c1 implemented in EvtBCVFF.\n";  
+    EvtGenReport(EVTGEN_ERROR,"ECVFF") << "Only J/psi, psi(2S), chi_c1 and D*0/anti-D*0 implemented.\n";
     ::abort();
   }
 }
